--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  font-family: sans-serif;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +17,197 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+p{
+  margin : 0 0 10px !important;
+}
+
+.section-header {
+  margin-bottom: 50px;
+}
+.section-header .section-title {
+  font-size: 44px;
+  color: #272727;
+  text-transform: uppercase;
+  position: relative;
+  padding-bottom: 15px;
+  margin: 0 0 20px;
+}
+.section-header .section-title:before {
+  content: "";
+  position: absolute;
+  width: 140px;
+  bottom: 0;
+  left: 50%;
+  margin-left: -70px;
+  height: 1px;
+  background: #ebebeb;
+}
+.section-header .section-title:after {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  bottom: -11px;
+  left: 50%;
+  margin-left: -12px;
+  border: 5px solid #fff;
+  border-radius: 20px;
+  background: #860500;
+}
+.btn {
+  border-width: 0;
+  border-bottom-width: 3px;
+  border-radius: 3px;
+}
+.btn.btn-primary {
+  background: #860500;
+  border-color: #ab322e;
+}
+.btn.btn-primary:hover,
+.btn.btn-primary:focus {
+  background: #ab322e;
+}
+/* img{
+  display: block;
+  max-width: 100%;
+  height: auto;
+} */
+img {
+  max-width: 100% !important;
+}
+p,
+h2,
+h3 {
+  orphans: 3;
+  widows: 3;
+}
+h2,
+h3 {
+  page-break-after: avoid;
+}
+
+li,a{
+  text-decoration: none;
+  list-style: none;
+}
+.primary-header{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.primary-header >*{
+  outline:2px solid green;
+}
+.navbar{
+  flex-grow: 1;
+
+
+
+}
+.site-nav ul {
+    display: flex;
+    flex-grow: 1;
+   
+}
+
+nav{
+  border: 12px solid transparent;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+.push-right{
+  margin-left: auto;
+}
+
+.site-nav{
+  flex-grow: 1;
+  background-color: #33f;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+.logo{
+  flex-grow: 1;
+  background-color: #3ff;
+
+  margin-left: auto;
+  margin-right: auto;
+}
+.navbar{
+  background-color: #f333fa ;
+  flex-grow: 1;
+  width: 100%;
+}
+.navbar-nav >a{
+  padding-top:35px;
+  padding-bottom:35px;
+}
+
+.navbar-nav > a:hover {
+  background: transparent;
+  padding-top: 32px;
+  border-top: 3px solid #860500;
+}
+.service-box{
+  margin:25px 0;
+}
+.pull-left{
+  float: left;
+  margin-right:20px;
+}
+.media-body{
+  display: table-cell;
+  vertical-align: top;
+}
+
+.pull-left {
+  border-radius:100%;
+  width: 64px;
+  height: 64px;
+  line-height: 74px;
+  text-align: center;
+  position: relative;
+  border-radius: 100%;
+  color: #860500;
+  box-shadow: inset 0 0 0 1px #d7d7d7;
+  -webkit-box-shadow: inset 0 0 0 1px #d7d7d7;
+  transition: background-color 400ms,background-color 400ms;
+
+}
+.pull-left:hover{
+  background:#860500;
+  color: #fff;
+  box-shadow: inset 0 0 0 5px #d1a09e;
+}
+ 
+.pull-left::after{
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 50%;
+  margin-top: -10px;
+  right: -10px;
+  border: 4px solid #fff;
+  border-radius: 20px;
+  background: #860500;
+}
+
+
+
+/* hire us section */
+
+#hire-section{
+  background-size: cover;
+  color: #fff;
+  padding: 70px 0;
+  background:gray url('Assets/hireSectionBg.jpg') no-repeat 50% 50%;
+}
+#hire-section h2{
+  font-size: 44px;
+  line-height: 1;
+  color: #fff;
+}
+#hire-section h2 > span{
+  color: #aa312d;
 }
