--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -14,13 +14,21 @@ position:absolute;
  width: 100%;
  background-color: antiquewhite;
 }
-.formShit{
+.form-inner-container{
     position: absolute;
     top: 0;
-    right: 50px;
-    margin-top:25px;
-    bottom:25px;
+    right: 150px;
     background-color: rgba(255, 255, 255,.8);
-    height: 600px;
+    height: 640px;
     border-radius: 10px;
 }
+.contact-form{
+    padding: 15px;
+}
+
+.form{
+    display:flex;
+    flex-direction: column;
+    padding: 15px;
+}
+
