--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -1,30 +1,45 @@
-
+#main-slider{
+    width: 100vw;
+}
 .carousel-indicators {
   display: none;
+}
+.carousel-inner{
+    width: 100%;
+
+}
+.carousel-item >img{
+    width: 100%;
+    height:400px;
 }
 
 .carousel-caption {
   position: absolute;
   top: 0px;
-  width: 400px;
+  left: 7.5%;
+  width: 420px;
   display: flex;
   justify-content: center;
-  align-content: center;
+  align-content:flex-start;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: flex-start;
   text-align: start;
+
 }
 .carousel-caption h2 {
   text-transform: uppercase;
-  font-size: 24px;
+  font-size: 30px;
   font-weight:bolder;
   margin-top: 20px;
+  padding-bottom: 0.5rem;
 }
 .carousel-caption span {
   color: #aa312d;
 }
 .carousel-caption p {
   font-size: 0.9rem;
+  padding-bottom: 0.5rem;
 }
 .carousel-control-prev,
 .carousel-control-next {
@@ -41,6 +56,12 @@
   text-align: center;
   border-radius: 100px;
   z-index: 5;
+}
+.carousel-control-prev{
+    left:-20px;
+}
+.carousel-control-next{
+    right:-20px;
 }
 
 .carousel-control-prev:hover,
